# singularity

./: .gitignore  Cargo.toml  README.md  justfile
crates/cosmic-pipewire/: Cargo.toml
crates/cosmic-subscriptions/a11y-manager/: Cargo.toml
crates/cosmic-subscriptions/accessibility/: Cargo.toml
crates/cosmic-subscriptions/accessibility/src/: lib.rs
crates/cosmic-subscriptions/airplane-mode/: Cargo.toml
crates/cosmic-subscriptions/airplane-mode/src/: lib.rs
crates/cosmic-subscriptions/bluetooth/: Cargo.toml
crates/cosmic-subscriptions/bluetooth/src/: adapter.rs  lib.rs
crates/cosmic-subscriptions/network-manager/: Cargo.toml
crates/cosmic-subscriptions/network-manager/src/: active_conns.rs  available_wifi.rs  devices.rs  lib.rs  nm_secret_agent.rs  wireless_enabled.rs
crates/cosmic-subscriptions/settings-daemon/: Cargo.toml
crates/cosmic-subscriptions/settings-daemon/src/: lib.rs
crates/cosmic-subscriptions/sound/: Cargo.toml
crates/cosmic-subscriptions/sound/src/: lib.rs
crates/cosmic-subscriptions/upower/: Cargo.toml
crates/cosmic-subscriptions/upower/src/: lib.rs
i18n/en/: singularity.ftl
resources/: app.desktop  app.metainfo.xml
src/: app.rs  bluetooth.rs  config.rs  i18n.rs  main.rs  network.rs
src/subscriptions/: mod.rs  mpris.rs  power.rs
src/views/: audio_details.rs  bluetooth_details.rs  detail_header.rs  main_view.rs  mod.rs  vpn_details.rs  wifi_details.rs
