[package]
name = "singularity"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "Unified quick-settings panel applet for COSMIC"
repository = "https://github.com/sreevikramr/singularity"

[dependencies]
futures = "0.3"
futures-util = "0.3.31"
i18n-embed-fl = "0.10"
rust-embed = "8.7.2"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1"
url = "2"
urlencoding = "2.1.3"
serde = { version = "1", features = ["derive"] }

[dependencies.i18n-embed]
version = "0.16"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
features = [
    "applet",
    "applet-token",
    "dbus-config",
    "multi-window",
    "tokio",
    "wayland",
    "winit",
    "desktop",
]

[dependencies.zbus]
version = "5"

# MPRIS media player D-Bus bindings
[dependencies.mpris2-zbus]
git = "https://github.com/pop-os/dbus-settings-bindings"

# NOTE: cosmic-settings-*-subscription crates are currently incompatible with
# libcosmic master (Subscription::run_with_id was renamed to run_with).
# Using direct zbus D-Bus calls for WiFi, Bluetooth, Audio, and Battery instead.
# These will be switched back to the official subscription crates once the
# cosmic-settings repo is updated for the new API.

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
