[package]
name = "singularity"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "Unified quick-settings panel applet for COSMIC"
repository = "https://github.com/sreevikramr/singularity"

[dependencies]
futures = "0.3"
futures-util = "0.3.31"
i18n-embed-fl = "0.10"
log = "0.4"
rust-embed = "8.7.2"
tokio = { version = "1", features = ["rt", "process", "time", "sync", "macros"] }
tracing = "0.1"
url = "2"
urlencoding = "2.1.3"
serde = { version = "1", features = ["derive"] }
tracing-subscriber = "0.3.22"
anyhow = "1"
async-fn-stream = "0.3"
indexmap = "2.13.0"
rustc-hash = "2"
secure-string = "0.3.0"
uuid = { version = "1", features = ["v4"] }
fastrand = "2.3.0"

[dependencies.bluer]
version = "0.17"
features = ["bluetoothd", "id"]


[dependencies.i18n-embed]
version = "0.16"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
rev = "1dc9aa37ed8b8670217f7b9f82d40b3476204ad1"
features = [
    "applet",
    "applet-token",
    "dbus-config",
    "multi-window",
    "tokio",
    "wayland",
    "winit",
    "desktop",
]

[dependencies.zbus]
version = "5"

# MPRIS media player D-Bus bindings
[dependencies.mpris2-zbus]
git = "https://github.com/pop-os/dbus-settings-bindings"
rev = "0fa672f8dadb884001ef9a251b149ed432879629"

# NM secret agent for WiFi password handling
[dependencies.nm-secret-agent-manager]
git = "https://github.com/pop-os/dbus-settings-bindings/"
rev = "0fa672f8dadb884001ef9a251b149ed432879629"

# UPower battery subscription
[dependencies.cosmic-settings-upower-subscription]
path = "vendor/cosmic-settings/subscriptions/upower"

# UPower D-Bus bindings (needed for types)
[dependencies.upower_dbus]
git = "https://github.com/pop-os/dbus-settings-bindings"
rev = "0fa672f8dadb884001ef9a251b149ed432879629"

# Settings daemon (brightness) subscription
[dependencies.cosmic-settings-daemon-subscription]
path = "vendor/cosmic-settings/subscriptions/settings-daemon"

# Network manager subscription
[dependencies.cosmic-settings-network-manager-subscription]
path = "vendor/cosmic-settings/subscriptions/network-manager"

# Sound/Audio subscription
[dependencies.cosmic-settings-sound-subscription]
path = "vendor/cosmic-settings/subscriptions/sound"

# Network manager D-Bus bindings (needed for types)
[dependencies.cosmic-dbus-networkmanager]
git = "https://github.com/pop-os/dbus-settings-bindings"
rev = "0fa672f8dadb884001ef9a251b149ed432879629"

# Airplane mode subscription
[dependencies.cosmic-settings-airplane-mode-subscription]
path = "vendor/cosmic-settings/subscriptions/airplane-mode"

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
