[package]
name = "cosmic-settings-bluetooth-subscription"
version = "1.0.7"
edition = "2024"
license = "MPL-2.0"
rust-version = "1.90"
publish = true

[dependencies]
bluez-zbus = { git = "https://github.com/pop-os/dbus-settings-bindings" }
futures = "0.3.32"
iced_futures = { git = "https://github.com/pop-os/libcosmic" }
tokio = { version = "1.49.0", features = ["process", "rt", "time", "macros", "sync"] }
tracing = "0.1.44"
zbus = "5.13.2"
