[package]
name = "cosmic-settings-sound-subscription"
version = "1.0.7"
edition = "2024"
rust-version = "1.90"
license = "MPL-2.0"
publish = true

[dependencies]
cosmic-pipewire = { path = "../../cosmic-pipewire" }
futures = "0.3.32"
intmap = "3.1.3"
libcosmic = { git = "https://github.com/pop-os/libcosmic", rev = "1dc9aa37ed8b8670217f7b9f82d40b3476204ad1", default-features = false }
numtoa = "1.0.0-alpha1"
rustix = "1.1.3"
tokio = { version = "1.49.0", features = ["process", "rt", "time"] }
tracing = { version = "0.1.44", default-features = false }

[features]
# Set profile on first load
auto-profile-init = []
