[package]
name = "cosmic-settings-upower-subscription"
version = "1.0.7"
edition = "2024"
license = "MPL-2.0"
rust-version = "1.90"
publish = true

[dependencies]
futures = "0.3.32"
iced_futures = { git = "https://github.com/pop-os/libcosmic", rev = "1dc9aa37ed8b8670217f7b9f82d40b3476204ad1" }
log = "0.4.29"
tokio = "1.49.0"
tokio-stream = "0.1.18"
upower_dbus = { git = "https://github.com/pop-os/dbus-settings-bindings", rev = "0fa672f8dadb884001ef9a251b149ed432879629" }
zbus = "5.13.2"
